--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "mime-types": "^2.1.27",
     "neo-async": "^2.6.2",
     "schema-utils": "^3.2.0",
-    "tapable": "^2.1.1",
+    "tapable": "link:../tapable",
     "terser-webpack-plugin": "^5.3.7",
     "watchpack": "^2.4.0",
     "webpack-sources": "^3.2.3"
